Iniciando parte do HTML e CSS

--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
-<table>
-    <thead>
-        <tr>
-            <th>Titulo</th>
-            <th>Diretor</th>
-            <th>Ano</th>
-            <th>Nascionalidade</th>
-            <th>Pais</th>
-            <th>Minutagem</th>
-            <th>Onde eu vi?</th>
-            <th>Nota</th>
-            
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Duna: Parte 2</td>
-            <td>Denis Villenueve</td>
-            <td>2024</td>
-            <td>EUA</td>
-            <td>Pais</td>
-            <td>167</td>
-            <td>Eco Cine (Peruíbe-SP)</td>
-            <td>6,0</td>
-        </tr>
-    </tbody>
-</table>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equip-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Vitória Regia</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Box Icons -->
+    <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+  </head>
+  <body>
+    <!-- Navbar -->
+    <header>  
+      <a href="#" class="logo">
+        <i class='bx bxs-movie'></i> Movies
+      </a>
+      <div class="bx bx-menu" id="menu-icon"></div>
+    </header>
+  </body>
+</html>
