--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         <i class='bx bxs-movie'></i> Movies
       </a>
       <div class="bx bx-menu" id="menu-icon"></div>
+
+      <!-- Menu -->
+      <ul class="navbar">
+        <li><a href="#home">Home</a></li>
+          <li><a href="#movies">Movies</a></li>
+            <li><a href="#coming">Coming</a></li>
+              <li><a href="#newsletter">Newsletter</a></li>
+      </ul>
+      <a href="#" class="btn">Sign In</a>
     </header>
   </body>
 </html>
