Home Section finalizada

--- a/index.html
+++ b/index.html
@@ -18,34 +18,59 @@
   <!-- Navbar -->
   <header>
     <a href="#" class="logo">
-      <i class='bx bxs-movie'></i> Movies
+      <i class='bx bxs-movie'></i> Cine Vitória Regia
     </a>
     <div class="bx bx-menu" id="menu-icon"></div>
 
     <!-- Menu -->
     <ul class="navbar">
       <li><a href="#home" class="home-active">Home</a></li>
-      <li><a href="#movies">Movies</a></li>
-      <li><a href="#coming">Coming</a></li>
-      <li><a href="#newsletter">Newsletter</a></li>
+      <li><a href="#movies">Filmes</a></li>
+      <li><a href="#coming">Em Breve</a></li>
+      <li><a href="#newsletter">Novidades</a></li>
     </ul>
-    <a href="#" class="btn">Sign In</a>
+    <a href="#" class="btn">Login</a>
   </header>
   <!-- Home -->
-  <section class="home" id="home">
+  <section class="home swiper" id="home">
     <div class="swiper-wrapper">
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-      <div class="swiper-slide">Slide 4</div>
-      <div class="swiper-slide">Slide 5</div>
-      <div class="swiper-slide">Slide 6</div>
-      <div class="swiper-slide">Slide 7</div>
-      <div class="swiper-slide">Slide 8</div>
-      <div class="swiper-slide">Slide 9</div>
+      <div class="swiper-slide conatiner">
+        <img src="img/home1.png" alt="">
+        <div class="home-text">
+          <span>Warner</span>
+          <h1>Batman: <br> O cavaleiro das trevas</h1>
+          <a href="#" class="btn">Compre Já!</a>
+        </div>
+          <a href="#" class="play">
+            <i class='bx bx-play'></i>
+          </a>
+      </div>
+      <!--Box 2-->
+      <div class="swiper-slide conatiner">
+        <img src="img/home2.png" alt="">
+        <div class="home-text">
+          <span>Warner</span>
+          <h1>Duna <br> Parte 2</h1>
+          <a href="#" class="btn">Compre Já!</a>
+        </div>
+          <a href="#" class="play">
+            <i class='bx bx-play'></i>
+          </a>
+      </div>
+      <!--Box 3-->
+      <div class="swiper-slide conatiner">
+        <img src="img/home3.png" alt="">
+        <div class="home-text">
+          <span>Warner</span>
+          <h1>Harry Potter <br> e o Prisioneiro de Azkaban</h1>
+          <a href="#" class="btn">Compre Já!</a>
+        </div>
+          <a href="#" class="play">
+            <i class='bx bx-play'></i>
+          </a>
+      </div>
     </div>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
+    
     <div class="swiper-pagination"></div>
   </section>
   <!-- Swiper JS -->
