--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li><a href="#movies">Filmes</a></li>
       <li><a href="#coming">Em Breve</a></li>
       <li><a href="#newsletter">Novidades</a></li>
+      <li><a href="#contact">Contato</a></li>
     </ul>
     <a href="#" class="btn">Login</a>
   </header>
@@ -70,8 +71,102 @@
           </a>
       </div>
     </div>
-    
     <div class="swiper-pagination"></div>
+  </section>
+  <!--Movies-->
+  <section class="movies" is="movies">
+    <h2 class="heading">Programação da semana</h2>
+    <!--Movies Conatier-->
+    
+    <div class="movies-container">
+      <!--Box 1-->
+      <div class="box">
+        <div class="box-img">
+        <img src="img/m1.png" alt="">
+      </div>
+      <h3>Homem-Aranha: Através do Aranhaverso</h3>
+      <spam>2h20 min | Aventura</spam>
+    </div>
+    <!--Box 2-->
+    <div class="box">
+      <div class="box-img">
+      <img src="img/m2.png" alt="">
+    </div>
+    <h3>Batman</h3>
+    <spam>2h56 min min | Ação</spam>
+  </div>
+  <!--Box 3-->
+  <div class="box">
+    <div class="box-img">
+    <img src="img/m3.png" alt="">
+  </div>
+  <h3>Coringa</h3>
+  <spam>2h02 min | Drama</spam>
+</div>
+  <!--Box 4-->
+  <div class="box">
+    <div class="box-img">
+    <img src="img/m4.png" alt="">
+  </div>
+  <h3>Shin Godzilla</h3>
+  <spam>2h | Drama</spam>
+</div>
+  <!--Box 5-->
+  <div class="box">
+    <div class="box-img">
+    <img src="img/m5.png" alt="">
+  </div>
+  <h3>A Bruxa</h3>
+  <spam>1h32 min | Terror</spam>
+</div>
+  <!--Box 6-->
+  <div class="box">
+    <div class="box-img">
+    <img src="img/m6.png" alt="">
+  </div>
+  <h3>O Senhor dos Anéis: O Retorno do Rei</h3>
+  <spam>3h21 min | Aventura</spam>
+</div>
+  <!--Box 7-->
+  <div class="box">
+    <div class="box-img">
+    <img src="img/m7.png" alt="">
+  </div>
+  <h3>O Exorcista</h3>
+  <spam>2h02 min | Drama</spam>
+</div>
+  <!--Box 8-->
+  <div class="box">
+    <div class="box-img">
+    <img src="img/m8.png" alt="">
+  </div>
+  <h3>Titanic</h3>
+  <spam>3h14 min | Romance</spam>
+</div>
+  <!--Box 9-->
+  <div class="box">
+    <div class="box-img">
+    <img src="img/m9.png" alt="">
+  </div>
+  <h3>Matilda: O Musical</h3>
+  <spam>1h57 min | Musical</spam>
+</div>
+<!--Box 10-->
+<div class="box">
+  <div class="box-img">
+  <img src="img/m10.png" alt="">
+</div>
+<h3>UP: Altas Aventuras</h3>
+<spam>1h36 min | Animação</spam>
+</div>
+</div>
+
+
+
+
+
+
+  </div>
   </section>
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
