Criado pagina 'Em breve' e inicio da pagina 'contato'

--- a/coming.html
+++ b/coming.html
@@ -74,14 +74,14 @@
   </section>
   <!--Movies-->
   <section class="movies" is="movies">
-    <h2 class="heading">Programação da semana</h2>
+    <h2 class="heading">Em Breve...</h2>
     <!--Movies Conatier-->
 
     <div class="movies-container">
       <!--Box 1-->
       <div class="box">
         <div class="box-img">
-          <img src="img/m1.png" alt="">
+          <img src="img/coming1.png" alt="">
         </div>
         <h3>Homem-Aranha: Através do Aranhaverso</h3>
         <spam>2h20 min | Aventura</spam>
@@ -89,7 +89,7 @@
       <!--Box 2-->
       <div class="box">
         <div class="box-img">
-          <img src="img/m2.png" alt="">
+          <img src="img/coming2.png" alt="">
         </div>
         <h3>Batman</h3>
         <spam>2h56 min min | Ação</spam>
@@ -97,7 +97,7 @@
       <!--Box 3-->
       <div class="box">
         <div class="box-img">
-          <img src="img/m3.png" alt="">
+          <img src="img/coming3.png" alt="">
         </div>
         <h3>Coringa</h3>
         <spam>2h02 min | Drama</spam>
@@ -105,7 +105,7 @@
       <!--Box 4-->
       <div class="box">
         <div class="box-img">
-          <img src="img/m4.png" alt="">
+          <img src="img/coming4.png" alt="">
         </div>
         <h3>Shin Godzilla</h3>
         <spam>2h | Drama</spam>
@@ -113,7 +113,7 @@
       <!--Box 5-->
       <div class="box">
         <div class="box-img">
-          <img src="img/m5.png" alt="">
+          <img src="img/coming5.png" alt="">
         </div>
         <h3>A Bruxa</h3>
         <spam>1h32 min | Terror</spam>
@@ -121,7 +121,7 @@
       <!--Box 6-->
       <div class="box">
         <div class="box-img">
-          <img src="img/m6.png" alt="">
+          <img src="img/coming6.png" alt="">
         </div>
         <h3>O Senhor dos Anéis: O Retorno do Rei</h3>
         <spam>3h21 min | Aventura</spam>
@@ -129,7 +129,7 @@
       <!--Box 7-->
       <div class="box">
         <div class="box-img">
-          <img src="img/m7.png" alt="">
+          <img src="img/coming7.png" alt="">
         </div>
         <h3>O Exorcista</h3>
         <spam>2h02 min | Drama</spam>
@@ -137,30 +137,15 @@
       <!--Box 8-->
       <div class="box">
         <div class="box-img">
-          <img src="img/m8.png" alt="">
+          <img src="img/coming8.png" alt="">
         </div>
         <h3>Titanic</h3>
         <spam>3h14 min | Romance</spam>
       </div>
-      <!--Box 9-->
-      <div class="box">
-        <div class="box-img">
-          <img src="img/m9.png" alt="">
-        </div>
-        <h3>Matilda: O Musical</h3>
-        <spam>1h57 min | Musical</spam>
-      </div>
-      <!--Box 10-->
-      <div class="box">
-        <div class="box-img">
-          <img src="img/m10.png" alt="">
-        </div>
-        <h3>UP: Altas Aventuras</h3>
-        <spam>1h36 min | Animação</spam>
-      </div>
     </div>
     </div>
   </section>
+</section>
 
 </section>
   <!-- Swiper JS -->
